--- a/index.html
+++ b/index.html
@@ -28,7 +28,27 @@
     </div>
    </section>
 
+    <section class="section2">
+        <h1>Donate Today</h1>
+        <p>Over 70% of Sylhet is under water, this is one of the largest regions in Bangladesh. <br> Thousands of people have fled for
+        safety.</p>
+
+        <div class="figure">
+        <h2 class="one">100tk</h2>
+        <h2 class="two">200tk </h2>
+        <h2 class="three">500tk </h2>
+        <h2 class="four">1000tk </h2>
+        <h2 class="five">5000tk </h2>
+        </div>
+        <br><br>
+       <P class="others"> Others amount Taka</P>
     
+    <hr width="50%">
+    <br> <br><br>
+    <a href=""></a>
+    <a class="Button" target="_blank" href="https://bdrcs.org/bangladesh-floods-2022/#">Donate Now</a>
+       
+    </section>
 
 
 
